# boids

./: .gitignore  Cargo.toml  boids_main-122743820348012b.js  build.rs  index.html  win.sh
.cargo/: config.toml
.github/workflows/: deploy-page.yaml
.zed/: tasks.json
assets/shaders/: cloud_background.wgsl  cloud_overlay.wgsl  clouds.wgsl
assets/textures/: birds.ora
benches/: toroidal_distance.rs
src/: clouds.rs  lib.rs  main.rs  squared_toroidal.rs
