[package]
name = "boids"
version = "0.1.0"
edition = "2024"

[lib]
name = "boids"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "toroidal_distance"
harness = false

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.34.1"
itertools = "0.14.0"
kiddo = "5.0.3"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"
